--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@mdi/font": "^7.0.96",
     "arraybuffer-to-buffer": "^0.0.7",
     "core-js": "^3.8.3",
     "electron-store": "^8.1.0",
