--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdi/font": "^7.0.96",
     "arraybuffer-to-buffer": "^0.0.7",
     "core-js": "^3.8.3",
+    "csv-writer": "^1.6.0",
     "electron-store": "^8.1.0",
     "fontsource-roboto": "^4.0.0",
     "gsap": "^3.11.1",
