--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wavesim",
-  "version": "0.2.1",
+  "version": "0.2.5",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mdi/font": "^7.0.96",
     "arraybuffer-to-buffer": "^0.0.7",
+    "canvas-gauges": "^2.1.7",
     "core-js": "^3.8.3",
     "csv-writer": "^1.6.0",
     "electron-store": "^8.1.0",
@@ -24,6 +25,7 @@
     "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue2-canvas-gauges": "^0.0.0",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
